changed: uncommented source("read_adjust_combine_rasters.R")
51
source("read_points_output_data.R")

--- a/spatial/note/Caples_Sat_Veg_Lidar_Comp.Rmd
+++ b/spatial/note/Caples_Sat_Veg_Lidar_Comp.Rmd
@@ -47,8 +47,8 @@ For basic satellite measurements derived from the [California Forest Observatory
 All data processed in two steps, if starting from scratch, run the following scripts:
 
 ```{r}
-#source("read_adjust_combine_rasters.R")
-#source("read_points_output_data.R")
+source("read_adjust_combine_rasters.R")
+source("read_points_output_data.R")
 ```
 #Map of points
 
