--- a/paper_assets/python/comb_simulation.ipynb
+++ b/paper_assets/python/comb_simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,120 +11,10 @@
     "import pyjags.model\n",
     "from sim_data import SimParams, SimData\n",
     "from sim_model import SimModelParams, SimModel\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'nsites': 25, 'nsurveys_aru': 5, 'nsurveys_scores': 5, 'nsurveys_pc': 5, 'covar': array([ 0.42429974, -1.09856014, -0.64455226,  0.0304553 ,  0.21725319,\n",
-      "       -2.54998899,  0.71897562,  0.57054771, -0.70817203, -0.67684616,\n",
-      "        1.20476083, -0.34410423, -0.55419459, -0.16547247,  0.56231301,\n",
-      "       -0.30407179, -0.35235292,  0.86895574,  0.29063085, -0.17446867,\n",
-      "        0.7419417 ,  0.70689554, -1.66163079,  0.46045739, -0.69584622]), 'siteid': (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25), 'y_pc': array([[0., 1., 1., 0., 1.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [1., 0., 1., 0., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [1., 0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [1., 0., 1., 0., 0.],\n",
-      "       [0., 1., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [1., 1., 1., 0., 1.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [1., 1., 1., 0., 1.],\n",
-      "       [0., 1., 1., 1., 1.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [1., 1., 0., 0., 1.],\n",
-      "       [0., 1., 0., 1., 1.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [0., 1., 0., 1., 0.]]), 'y_aru': array([[0., 0., 0., 1., 1.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [0., 0., 1., 1., 1.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [1., 1., 1., 1., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [1., 1., 1., 1., 1.],\n",
-      "       [0., 1., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [0., 0., 1., 1., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [1., 1., 0., 1., 0.],\n",
-      "       [0., 1., 1., 1., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [1., 1., 0., 1., 1.],\n",
-      "       [0., 0., 1., 0., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0., 0.],\n",
-      "       [1., 0., 0., 1., 0.]]), 'scores': array([[-1.99026267, -2.38566962, -2.32961056,  3.4194225 ,  5.08546488],\n",
-      "       [-1.8119469 , -1.87932618, -1.78733732, -2.64803029, -2.06898721],\n",
-      "       [-2.16175654, -2.72262911, -2.90684819, -2.27899196, -2.34725774],\n",
-      "       [-1.78414047, -2.31308026,  3.91265317,  4.48702565,  4.72623262],\n",
-      "       [-2.83550568, -2.45634494, -1.94298347, -2.43964081, -1.94722423],\n",
-      "       [-1.8466558 , -2.50781365, -2.3584611 , -2.86543272, -1.91645894],\n",
-      "       [ 5.72597136,  5.06205659,  3.5402005 ,  3.31735894, -1.75386024],\n",
-      "       [-2.29945192, -2.08671949, -2.09111341, -1.92978645, -2.22328164],\n",
-      "       [ 6.4344149 ,  5.51104202,  4.08588317,  3.55391346,  3.88579852],\n",
-      "       [-2.53596224,  3.10652679, -1.87204642,  3.6936847 , -1.92210042],\n",
-      "       [-2.56713726, -2.22599558, -2.63406862, -2.61687467, -2.04169031],\n",
-      "       [-2.29674589, -2.07838723,  3.25246402,  4.09850745, -2.06374186],\n",
-      "       [-2.16201343, -2.39639699, -1.87394985, -2.52108663, -2.5789477 ],\n",
-      "       [-1.88124588, -3.27671264, -2.12743062,  5.56498697, -2.90857067],\n",
-      "       [ 4.44362929,  5.01215593, -2.07637674,  3.72612366, -2.13364373],\n",
-      "       [-2.70005446,  5.95646241,  4.23172272,  3.99943523, -2.33529359],\n",
-      "       [-1.8540208 , -2.01775811, -2.14821347, -2.49110918, -1.9066872 ],\n",
-      "       [-1.91759392, -2.11740459, -2.23363276,  3.66454493, -2.33094655],\n",
-      "       [-1.8375429 , -2.13800586, -2.94871877, -2.41553626, -2.23291154],\n",
-      "       [-1.89304686, -2.49838334, -2.22116396, -2.34745422, -2.04440258],\n",
-      "       [ 3.97609101,  6.04028157, -2.46196803,  5.54188472,  4.44716935],\n",
-      "       [-1.81182945, -1.84975708,  7.66603557, -1.89534106, -2.04640171],\n",
-      "       [-2.43850761, -1.81671691, -2.38579557, -1.83704956, -2.35220391],\n",
-      "       [-2.86433806, -1.91828594, -2.42067932, -2.02784224, -2.19269324],\n",
-      "       [ 4.09143514, -2.69838571, -1.77439556,  5.21305152, -1.81073595]])}\n",
-      "{'mu': array([-1.3285307 , -0.32072105]), 'sigma': array([1.56070971, 0.92599479]), 'z': array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "       1, 1, 1]), 'beta0': 0, 'beta1': 0, 'p_aru11': 0.2, 'p_aru01': 0.1, 'p11': 0.2}\n",
-      "adapting: iterations 6000 of 6000, elapsed 0:00:01, remaining 0:00:00\n",
-      "sampling: iterations 30234 of 48000, elapsed 0:00:05, remaining 0:00:03\n",
-      "sampling: iterations 48000 of 48000, elapsed 0:00:08, remaining 0:00:00\n"
-     ]
-    }
-   ],
-   "source": [
-    "params = SimParams(\n",
-    "    nsites=25,\n",
-    "    nsurveys_aru=5,\n",
-    "    nsurveys_pc=5,\n",
-    "    covar_continuous=True,\n",
-    ")\n",
-    "\n",
-    "sim_data = SimData(params)\n",
-    "sim_data.gen_simulated_data()\n",
-    "\n",
-    "sim_model_params = SimModelParams(\n",
-    "    include_aru_model=True,\n",
-    "    include_scores_model=True,    \n",
-    "    sim_data=sim_data)\n",
-    "model = SimModel(sim_model_params)\n",
-    "samples = model.sample()"
+    "from sim_results import SimResults\n",
+    "import matplotlib.pyplot as plt\n",
+    "import arviz as az\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -133,18 +23,295 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nsites': 25, 'nsurveys_aru': 3, 'nsurveys_scores': 3, 'nsurveys_pc': 3, 'covar': array([-0.53282984, -1.2716623 ,  0.57153876, -1.41760567, -1.20330537,\n",
+      "       -0.27871285,  0.6906671 , -0.86245381, -0.378285  ,  0.20364598,\n",
+      "       -1.97624738, -0.13460696,  0.86390741,  1.08174226, -0.58772313,\n",
+      "       -1.72128667,  1.65494876, -0.38836432, -0.57304988, -1.13461443,\n",
+      "        0.75278405,  0.25148557, -0.28695917, -1.19936008, -0.39743591]), 'siteid': (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25), 'y_pc': array([[1., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [1., 1., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [1., 0., 1.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 1.],\n",
+      "       [0., 0., 1.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [1., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.]]), 'y_aru': array([[1., 1., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [1., 1., 1.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 1.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 1., 0.],\n",
+      "       [0., 0., 1.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 1., 1.],\n",
+      "       [0., 1., 1.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 1.],\n",
+      "       [1., 1., 1.],\n",
+      "       [1., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [1., 1., 1.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.]]), 'scores': array([[ 5.96734195, -1.52150596, -3.248021  ],\n",
+      "       [-3.05213533, -3.20883905, -3.09776526],\n",
+      "       [ 3.20840793, -1.16077322,  4.99910303],\n",
+      "       [-3.07862635, -3.06871068, -3.15178323],\n",
+      "       [-3.36329785, -3.65308041, -0.3602022 ],\n",
+      "       [-3.31675797, -3.38790242, -3.12205257],\n",
+      "       [-3.21051382, -3.02728579, -3.16881986],\n",
+      "       [-3.7397585 , -3.11442512, -3.15949359],\n",
+      "       [-3.03818361, -3.16337705, -3.00085721],\n",
+      "       [-3.05394727, -1.57782744, -3.78393592],\n",
+      "       [-3.21240351, -3.12548861,  2.44565553],\n",
+      "       [-3.34966402, -3.04385323, -3.07554453],\n",
+      "       [-3.16914464,  3.90823168,  0.77512601],\n",
+      "       [-3.44676873,  4.26226053,  2.56807967],\n",
+      "       [-3.02981146, -3.05256078, -3.17317533],\n",
+      "       [-3.10970999, -3.04571817,  2.36069839],\n",
+      "       [ 3.29389862,  3.49640474,  2.55761618],\n",
+      "       [ 2.3025742 , -3.21527825, -3.36985966],\n",
+      "       [-3.00223158, -3.09381915, -3.38126331],\n",
+      "       [-3.10386586, -3.03140681, -3.01025494],\n",
+      "       [-3.25432269, -3.10602895, -3.38026465],\n",
+      "       [-3.65857561, -3.01497671, -3.0814154 ],\n",
+      "       [-1.56046904, -1.14335848,  2.88001417],\n",
+      "       [-3.15563887, -3.09038793, -3.00338234],\n",
+      "       [-3.21495553, -3.07951409, -3.21528011]])}\n",
+      "adapting: iterations 6000 of 6000, elapsed 0:00:01, remaining 0:00:00\n",
+      "sampling: iterations 48000 of 48000, elapsed 0:00:06, remaining 0:00:00\n",
+      "sampling: iterations 48000 of 48000, elapsed 0:00:06, remaining 0:00:00\n",
+      "{'nsites': 25, 'nsurveys_aru': 3, 'nsurveys_scores': 3, 'nsurveys_pc': 3, 'covar': array([-0.48997642, -0.45615234,  1.02720157,  1.65656454, -2.4410345 ,\n",
+      "        0.23131103,  0.91474787, -1.19976706, -0.01648913, -0.59210825,\n",
+      "        0.90374556,  0.609457  ,  0.855768  ,  1.00053003, -1.10554139,\n",
+      "        1.06642713, -0.46753596, -0.12505145,  1.435506  , -1.10565046,\n",
+      "       -0.53526768, -0.09964601,  0.91935786,  1.28355737,  0.26376643]), 'siteid': (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25), 'y_pc': array([[0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 1., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 1.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [1., 0., 1.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [1., 1., 1.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [1., 0., 0.],\n",
+      "       [0., 1., 0.],\n",
+      "       [0., 0., 0.]]), 'y_aru': array([[0., 0., 0.],\n",
+      "       [0., 0., 1.],\n",
+      "       [0., 0., 0.],\n",
+      "       [1., 0., 1.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [1., 1., 1.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [1., 1., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [1., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [1., 0., 1.],\n",
+      "       [0., 0., 0.],\n",
+      "       [1., 0., 0.],\n",
+      "       [1., 1., 1.],\n",
+      "       [0., 0., 0.],\n",
+      "       [0., 0., 0.],\n",
+      "       [1., 1., 1.],\n",
+      "       [0., 0., 0.],\n",
+      "       [1., 0., 1.],\n",
+      "       [0., 0., 0.]]), 'scores': array([[-3.34957102, -3.23918601, -3.20204626],\n",
+      "       [-3.06857766, -3.25032614,  0.64706579],\n",
+      "       [-3.13345333, -3.30866059, -3.02408276],\n",
+      "       [-0.35629436, -3.32408812,  0.10774081],\n",
+      "       [-3.1555485 , -3.21218733, -3.08851608],\n",
+      "       [-3.12867866, -3.36988252, -3.36726976],\n",
+      "       [-1.0304863 ,  3.0775484 ,  5.39924376],\n",
+      "       [-3.01106518, -3.11438725, -3.05527109],\n",
+      "       [-3.17237483, -3.1310651 , -3.1989898 ],\n",
+      "       [-3.06520022, -3.15278875, -3.0294001 ],\n",
+      "       [-3.36636995, -3.1028315 , -3.05225182],\n",
+      "       [ 6.20469998,  0.12794279, -3.43603329],\n",
+      "       [-3.0107564 , -3.11493367, -3.19139715],\n",
+      "       [-1.41881727, -3.09725332, -3.05006519],\n",
+      "       [-3.07550739, -3.22148278, -3.08487571],\n",
+      "       [ 4.80463419, -3.07773145,  2.90306577],\n",
+      "       [-3.22425037, -3.30570461, -3.24216793],\n",
+      "       [ 1.84021866, -3.04060547, -3.3152908 ],\n",
+      "       [ 1.67104866, -1.01320192,  2.27927837],\n",
+      "       [-3.31348794, -3.22798401, -3.26553324],\n",
+      "       [-3.25728988, -3.14905311, -3.26517771],\n",
+      "       [ 2.6190904 ,  2.65878627,  1.04781491],\n",
+      "       [-3.51769773, -3.09000651, -3.11365778],\n",
+      "       [ 2.29146818, -3.09100973, -0.37590212],\n",
+      "       [-3.63175622, -3.13866215, -3.14015412]])}\n",
+      "adapting: iterations 6000 of 6000, elapsed 0:00:01, remaining 0:00:00\n",
+      "sampling: iterations 44664 of 48000, elapsed 0:00:06, remaining 0:00:00\n",
+      "sampling: iterations 48000 of 48000, elapsed 0:00:07, remaining 0:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "def run_sim():\n",
+    "    params = SimParams(\n",
+    "        nsites=25,\n",
+    "        nsurveys_aru=3,\n",
+    "        nsurveys_pc=3,\n",
+    "        covar_continuous=True,\n",
+    "        beta0=0,\n",
+    "        beta1=1,\n",
+    "        threshold=-2,\n",
+    "    )\n",
+    "    sim_data = SimData(params)\n",
+    "    sim_data.gen_simulated_data()\n",
+    "\n",
+    "    sim_model_params = SimModelParams(\n",
+    "        include_aru_model=True, include_scores_model=True, sim_data=sim_data\n",
+    "    )\n",
+    "\n",
+    "    model = SimModel(sim_model_params)\n",
+    "\n",
+    "    samples = model.sample()\n",
+    "    return samples\n",
+    "\n",
+    "\n",
+    "sim_results = SimResults()\n",
+    "\n",
+    "for _ in range(2):\n",
+    "    samples = run_sim()\n",
+    "    sim_results.append_samples(samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary = sim_results.get_summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>sd</th>\n",
+       "      <th>hdi_3%</th>\n",
+       "      <th>hdi_97%</th>\n",
+       "      <th>mcse_mean</th>\n",
+       "      <th>mcse_sd</th>\n",
+       "      <th>ess_bulk</th>\n",
+       "      <th>ess_tail</th>\n",
+       "      <th>r_hat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.390</td>\n",
+       "      <td>0.455</td>\n",
+       "      <td>-0.469</td>\n",
+       "      <td>1.241</td>\n",
+       "      <td>0.003</td>\n",
+       "      <td>0.002</td>\n",
+       "      <td>24139.0</td>\n",
+       "      <td>25017.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.462</td>\n",
+       "      <td>0.562</td>\n",
+       "      <td>0.430</td>\n",
+       "      <td>2.535</td>\n",
+       "      <td>0.004</td>\n",
+       "      <td>0.003</td>\n",
+       "      <td>23526.0</td>\n",
+       "      <td>25717.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(48000,)"
+       "    mean     sd  hdi_3%  hdi_97%  mcse_mean  mcse_sd  ess_bulk  ess_tail  \\\n",
+       "0  0.390  0.455  -0.469    1.241      0.003    0.002   24139.0   25017.0   \n",
+       "1  1.462  0.562   0.430    2.535      0.004    0.003   23526.0   25717.0   \n",
+       "\n",
+       "   r_hat  \n",
+       "0    1.0  \n",
+       "1    1.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "samples[\"beta0\"].reshape(-1)"
+    "summary[\"beta1\"]"
    ]
   },
   {
