--- a/paper_assets/python/comb_simulation.ipynb
+++ b/paper_assets/python/comb_simulation.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyjags\n",
     "import numpy as np\n",
     "import pyjags.model\n",
-    "from sim_data import SimParams, SimData\n",
-    "from sim_model import SimModelParams, SimModel\n",
+    "from sim_data import SimParams\n",
+    "from sim_model import SimModel\n",
     "from sim_results import SimResults\n",
     "import matplotlib.pyplot as plt\n",
     "import arviz as az\n",
@@ -19,210 +19,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'nsites': 25, 'nsurveys_aru': 3, 'nsurveys_scores': 3, 'nsurveys_pc': 3, 'covar': array([-0.53282984, -1.2716623 ,  0.57153876, -1.41760567, -1.20330537,\n",
-      "       -0.27871285,  0.6906671 , -0.86245381, -0.378285  ,  0.20364598,\n",
-      "       -1.97624738, -0.13460696,  0.86390741,  1.08174226, -0.58772313,\n",
-      "       -1.72128667,  1.65494876, -0.38836432, -0.57304988, -1.13461443,\n",
-      "        0.75278405,  0.25148557, -0.28695917, -1.19936008, -0.39743591]), 'siteid': (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25), 'y_pc': array([[1., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [1., 1., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [1., 0., 1.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 1.],\n",
-      "       [0., 0., 1.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [1., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.]]), 'y_aru': array([[1., 1., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [1., 1., 1.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 1.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 1., 0.],\n",
-      "       [0., 0., 1.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 1., 1.],\n",
-      "       [0., 1., 1.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 1.],\n",
-      "       [1., 1., 1.],\n",
-      "       [1., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [1., 1., 1.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.]]), 'scores': array([[ 5.96734195, -1.52150596, -3.248021  ],\n",
-      "       [-3.05213533, -3.20883905, -3.09776526],\n",
-      "       [ 3.20840793, -1.16077322,  4.99910303],\n",
-      "       [-3.07862635, -3.06871068, -3.15178323],\n",
-      "       [-3.36329785, -3.65308041, -0.3602022 ],\n",
-      "       [-3.31675797, -3.38790242, -3.12205257],\n",
-      "       [-3.21051382, -3.02728579, -3.16881986],\n",
-      "       [-3.7397585 , -3.11442512, -3.15949359],\n",
-      "       [-3.03818361, -3.16337705, -3.00085721],\n",
-      "       [-3.05394727, -1.57782744, -3.78393592],\n",
-      "       [-3.21240351, -3.12548861,  2.44565553],\n",
-      "       [-3.34966402, -3.04385323, -3.07554453],\n",
-      "       [-3.16914464,  3.90823168,  0.77512601],\n",
-      "       [-3.44676873,  4.26226053,  2.56807967],\n",
-      "       [-3.02981146, -3.05256078, -3.17317533],\n",
-      "       [-3.10970999, -3.04571817,  2.36069839],\n",
-      "       [ 3.29389862,  3.49640474,  2.55761618],\n",
-      "       [ 2.3025742 , -3.21527825, -3.36985966],\n",
-      "       [-3.00223158, -3.09381915, -3.38126331],\n",
-      "       [-3.10386586, -3.03140681, -3.01025494],\n",
-      "       [-3.25432269, -3.10602895, -3.38026465],\n",
-      "       [-3.65857561, -3.01497671, -3.0814154 ],\n",
-      "       [-1.56046904, -1.14335848,  2.88001417],\n",
-      "       [-3.15563887, -3.09038793, -3.00338234],\n",
-      "       [-3.21495553, -3.07951409, -3.21528011]])}\n",
+      "sampling: iterations 1 of 1, elapsed 0:00:00, remaining 0:00:00\n",
       "adapting: iterations 6000 of 6000, elapsed 0:00:01, remaining 0:00:00\n",
-      "sampling: iterations 48000 of 48000, elapsed 0:00:06, remaining 0:00:00\n",
-      "sampling: iterations 48000 of 48000, elapsed 0:00:06, remaining 0:00:00\n",
-      "{'nsites': 25, 'nsurveys_aru': 3, 'nsurveys_scores': 3, 'nsurveys_pc': 3, 'covar': array([-0.48997642, -0.45615234,  1.02720157,  1.65656454, -2.4410345 ,\n",
-      "        0.23131103,  0.91474787, -1.19976706, -0.01648913, -0.59210825,\n",
-      "        0.90374556,  0.609457  ,  0.855768  ,  1.00053003, -1.10554139,\n",
-      "        1.06642713, -0.46753596, -0.12505145,  1.435506  , -1.10565046,\n",
-      "       -0.53526768, -0.09964601,  0.91935786,  1.28355737,  0.26376643]), 'siteid': (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25), 'y_pc': array([[0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 1., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 1.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [1., 0., 1.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [1., 1., 1.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [1., 0., 0.],\n",
-      "       [0., 1., 0.],\n",
-      "       [0., 0., 0.]]), 'y_aru': array([[0., 0., 0.],\n",
-      "       [0., 0., 1.],\n",
-      "       [0., 0., 0.],\n",
-      "       [1., 0., 1.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [1., 1., 1.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [1., 1., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [1., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [1., 0., 1.],\n",
-      "       [0., 0., 0.],\n",
-      "       [1., 0., 0.],\n",
-      "       [1., 1., 1.],\n",
-      "       [0., 0., 0.],\n",
-      "       [0., 0., 0.],\n",
-      "       [1., 1., 1.],\n",
-      "       [0., 0., 0.],\n",
-      "       [1., 0., 1.],\n",
-      "       [0., 0., 0.]]), 'scores': array([[-3.34957102, -3.23918601, -3.20204626],\n",
-      "       [-3.06857766, -3.25032614,  0.64706579],\n",
-      "       [-3.13345333, -3.30866059, -3.02408276],\n",
-      "       [-0.35629436, -3.32408812,  0.10774081],\n",
-      "       [-3.1555485 , -3.21218733, -3.08851608],\n",
-      "       [-3.12867866, -3.36988252, -3.36726976],\n",
-      "       [-1.0304863 ,  3.0775484 ,  5.39924376],\n",
-      "       [-3.01106518, -3.11438725, -3.05527109],\n",
-      "       [-3.17237483, -3.1310651 , -3.1989898 ],\n",
-      "       [-3.06520022, -3.15278875, -3.0294001 ],\n",
-      "       [-3.36636995, -3.1028315 , -3.05225182],\n",
-      "       [ 6.20469998,  0.12794279, -3.43603329],\n",
-      "       [-3.0107564 , -3.11493367, -3.19139715],\n",
-      "       [-1.41881727, -3.09725332, -3.05006519],\n",
-      "       [-3.07550739, -3.22148278, -3.08487571],\n",
-      "       [ 4.80463419, -3.07773145,  2.90306577],\n",
-      "       [-3.22425037, -3.30570461, -3.24216793],\n",
-      "       [ 1.84021866, -3.04060547, -3.3152908 ],\n",
-      "       [ 1.67104866, -1.01320192,  2.27927837],\n",
-      "       [-3.31348794, -3.22798401, -3.26553324],\n",
-      "       [-3.25728988, -3.14905311, -3.26517771],\n",
-      "       [ 2.6190904 ,  2.65878627,  1.04781491],\n",
-      "       [-3.51769773, -3.09000651, -3.11365778],\n",
-      "       [ 2.29146818, -3.09100973, -0.37590212],\n",
-      "       [-3.63175622, -3.13866215, -3.14015412]])}\n",
-      "adapting: iterations 6000 of 6000, elapsed 0:00:01, remaining 0:00:00\n",
-      "sampling: iterations 44664 of 48000, elapsed 0:00:06, remaining 0:00:00\n",
+      "sampling: iterations 41154 of 48000, elapsed 0:00:05, remaining 0:00:01\n",
       "sampling: iterations 48000 of 48000, elapsed 0:00:07, remaining 0:00:00\n"
      ]
     }
    ],
    "source": [
+    "params = SimParams(\n",
+    "    nsites=25,\n",
+    "    nsurveys_aru=3,\n",
+    "    nsurveys_pc=3,\n",
+    "    covar_continuous=True,\n",
+    "    beta0=0,\n",
+    "    beta1=1,\n",
+    "    threshold=0,\n",
+    "    include_aru_model=True,\n",
+    ")\n",
+    "\n",
+    "\n",
     "def run_sim():\n",
-    "    params = SimParams(\n",
-    "        nsites=25,\n",
-    "        nsurveys_aru=3,\n",
-    "        nsurveys_pc=3,\n",
-    "        covar_continuous=True,\n",
-    "        beta0=0,\n",
-    "        beta1=1,\n",
-    "        threshold=-2,\n",
-    "    )\n",
-    "    sim_data = SimData(params)\n",
-    "    sim_data.gen_simulated_data()\n",
-    "\n",
-    "    sim_model_params = SimModelParams(\n",
-    "        include_aru_model=True, include_scores_model=True, sim_data=sim_data\n",
-    "    )\n",
-    "\n",
-    "    model = SimModel(sim_model_params)\n",
+    "    model = SimModel(params)\n",
     "\n",
     "    samples = model.sample()\n",
     "    return samples\n",
     "\n",
     "\n",
-    "sim_results = SimResults()\n",
+    "sim_results = SimResults(params)\n",
     "\n",
-    "for _ in range(2):\n",
+    "for _ in range(1):\n",
     "    samples = run_sim()\n",
     "    sim_results.append_samples(samples)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sim_results.sim_params.beta1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -269,26 +129,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.390</td>\n",
-       "      <td>0.455</td>\n",
-       "      <td>-0.469</td>\n",
-       "      <td>1.241</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>24139.0</td>\n",
-       "      <td>25017.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.462</td>\n",
-       "      <td>0.562</td>\n",
-       "      <td>0.430</td>\n",
-       "      <td>2.535</td>\n",
+       "      <td>1.672</td>\n",
+       "      <td>0.633</td>\n",
+       "      <td>0.507</td>\n",
+       "      <td>2.859</td>\n",
        "      <td>0.004</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>23526.0</td>\n",
-       "      <td>25717.0</td>\n",
+       "      <td>28106.0</td>\n",
+       "      <td>25151.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -297,15 +145,13 @@
       ],
       "text/plain": [
        "    mean     sd  hdi_3%  hdi_97%  mcse_mean  mcse_sd  ess_bulk  ess_tail  \\\n",
-       "0  0.390  0.455  -0.469    1.241      0.003    0.002   24139.0   25017.0   \n",
-       "1  1.462  0.562   0.430    2.535      0.004    0.003   23526.0   25717.0   \n",
+       "0  1.672  0.633   0.507    2.859      0.004    0.003   28106.0   25151.0   \n",
        "\n",
        "   r_hat  \n",
-       "0    1.0  \n",
-       "1    1.0  "
+       "0    1.0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
