--- a/paper_assets/python/comb_simulation.ipynb
+++ b/paper_assets/python/comb_simulation.ipynb
@@ -23,13 +23,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sampling: iterations 1 of 1, elapsed 0:00:00, remaining 0:00:00\n",
-      "adapting: iterations 6000 of 6000, elapsed 0:00:01, remaining 0:00:00\n",
-      "sampling: iterations 41154 of 48000, elapsed 0:00:05, remaining 0:00:01\n",
-      "sampling: iterations 48000 of 48000, elapsed 0:00:07, remaining 0:00:00\n"
+     "ename": "JagsError",
+     "evalue": "RUNTIME ERROR:\nCompilation error on line 6.\nUnknown variable psi\nEither supply values for this variable with the data\nor define it  on the left hand side of a relation.\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mJagsError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 23\u001b[0m\n\u001b[1;32m     20\u001b[0m sim_results \u001b[38;5;241m=\u001b[39m SimResults(params)\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m10\u001b[39m):\n\u001b[0;32m---> 23\u001b[0m     samples \u001b[38;5;241m=\u001b[39m \u001b[43mrun_sim\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m     sim_results\u001b[38;5;241m.\u001b[39mappend_samples(samples)\n",
+      "Cell \u001b[0;32mIn[2], line 14\u001b[0m, in \u001b[0;36mrun_sim\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrun_sim\u001b[39m():\n\u001b[0;32m---> 14\u001b[0m     model \u001b[38;5;241m=\u001b[39m \u001b[43mSimModel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     16\u001b[0m     samples \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39msample()\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m samples\n",
+      "File \u001b[0;32m~/github/COMB/paper_assets/python/sim_model.py:23\u001b[0m, in \u001b[0;36mSimModel.__init__\u001b[0;34m(self, params)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# first generate the simulation data\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# generate jags data model text\u001b[39;00m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# this \"model\" will only generate data to be used in the simulation\u001b[39;00m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata_text \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgen_jags_data_text()\n\u001b[0;32m---> 23\u001b[0m sim_data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgen_simulated_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;66;03m# generate the jags model text for the actual model\u001b[39;00m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel_text \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgen_jags_model_text()\n",
+      "File \u001b[0;32m~/github/COMB/paper_assets/python/sim_model.py:359\u001b[0m, in \u001b[0;36mSimModel.gen_simulated_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    357\u001b[0m data_vars \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfind_variables(\u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m\u001b[38;5;241m.\u001b[39mkeys()), \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata_text)\n\u001b[1;32m    358\u001b[0m data \u001b[38;5;241m=\u001b[39m {var: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m[var] \u001b[38;5;28;01mfor\u001b[39;00m var \u001b[38;5;129;01min\u001b[39;00m data_vars}\n\u001b[0;32m--> 359\u001b[0m data_model \u001b[38;5;241m=\u001b[39m \u001b[43mpyjags\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mModel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcode\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata_text\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mchains\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    360\u001b[0m samples \u001b[38;5;241m=\u001b[39m data_model\u001b[38;5;241m.\u001b[39msample(iterations\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m    361\u001b[0m monitored \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my_aru\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my_pc\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mscores\u001b[39m\u001b[38;5;124m\"\u001b[39m}\n",
+      "File \u001b[0;32m~/miniconda3/envs/COMB/lib/python3.9/site-packages/pyjags/model.py:286\u001b[0m, in \u001b[0;36mModel.__init__\u001b[0;34m(self, code, data, init, chains, adapt, file, encoding, generate_data, progress_bar, refresh_seconds, threads, chains_per_thread)\u001b[0m\n\u001b[1;32m    283\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m model_path(file, code, encoding) \u001b[38;5;28;01mas\u001b[39;00m path:\n\u001b[1;32m    284\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconsole\u001b[38;5;241m.\u001b[39mcheckModel(path)\n\u001b[0;32m--> 286\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_init_compile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgenerate_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    287\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_init_parameters(init)\n\u001b[1;32m    288\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconsole\u001b[38;5;241m.\u001b[39minitialize()\n",
+      "File \u001b[0;32m~/miniconda3/envs/COMB/lib/python3.9/site-packages/pyjags/model.py:300\u001b[0m, in \u001b[0;36mModel._init_compile\u001b[0;34m(self, data, generate_data)\u001b[0m\n\u001b[1;32m    297\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m unused:\n\u001b[1;32m    298\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    299\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUnused data for variables: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(unused)))\n\u001b[0;32m--> 300\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconsole\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchains\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgenerate_data\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mJagsError\u001b[0m: RUNTIME ERROR:\nCompilation error on line 6.\nUnknown variable psi\nEither supply values for this variable with the data\nor define it  on the left hand side of a relation.\n"
      ]
     }
    ],
@@ -42,7 +48,7 @@
     "    beta0=0,\n",
     "    beta1=1,\n",
     "    threshold=0,\n",
-    "    include_aru_model=True,\n",
+    "    include_covar_model=False\n",
     ")\n",
     "\n",
     "\n",
@@ -55,7 +61,7 @@
     "\n",
     "sim_results = SimResults(params)\n",
     "\n",
-    "for _ in range(1):\n",
+    "for _ in range(10):\n",
     "    samples = run_sim()\n",
     "    sim_results.append_samples(samples)"
    ]
