add uv and lint

--- a/paper_assets/python/simulation/sim_results_eda.ipynb
+++ b/paper_assets/python/simulation/sim_results_eda.ipynb
@@ -6,10 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sim_lib.sim_results import ManySimResults, SimResults\n",
-    "import polars as pl\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "from sim_lib.sim_results import ManySimResults\n",
+    "import polars as pl"
    ]
   },
   {
@@ -121,7 +119,7 @@
     }
    ],
    "source": [
-    "filtered_sims[0].summary['beta0']"
+    "filtered_sims[0].summary[\"beta0\"]"
    ]
   },
   {
